--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
 
             <ul class="track-list-accordion">
-                <li class="track-item" data-track-index="0" data-src="audio/track1.wav">
+                <li class="track-item" data-track-index="0" data-src="audio/track1.mp3">
                     <div class="track-title-container">
                          <button class="play-track-btn" title="Reproducir Pista">▶</button>
                          <button class="track-title-button">
@@ -74,7 +74,7 @@
                     </div>
                 </li>
 
-                <li class="track-item" data-track-index="1" data-src="audio/track2.wav">
+                <li class="track-item" data-track-index="1" data-src="audio/track2.mp3">
                      <div class="track-title-container">
                          <button class="play-track-btn" title="Reproducir Pista">▶</button>
                          <button class="track-title-button">
@@ -116,7 +116,7 @@
                     </div>
                 </li>
 
-                <li class="track-item" data-track-index="2" data-src="audio/track3.wav">
+                <li class="track-item" data-track-index="2" data-src="audio/track3.mp3">
                      <div class="track-title-container">
                          <button class="play-track-btn" title="Reproducir Pista">▶</button>
                          <button class="track-title-button">
@@ -153,7 +153,7 @@
                     </div>
                 </li>
 
-                 <li class="track-item" data-track-index="3" data-src="audio/track4.wav">
+                 <li class="track-item" data-track-index="3" data-src="audio/track4.mp3">
                      <div class="track-title-container">
                          <button class="play-track-btn" title="Reproducir Pista">▶</button>
                          <button class="track-title-button">
@@ -176,7 +176,7 @@
                     </div>
                 </li>
 
-                 <li class="track-item" data-track-index="4" data-src="audio/track5.wav">
+                 <li class="track-item" data-track-index="4" data-src="audio/track5.mp3">
                      <div class="track-title-container">
                          <button class="play-track-btn" title="Reproducir Pista">▶</button>
                          <button class="track-title-button">
