--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                  <img src="img/band-photo.jpg" alt="MYLCC en vivo">
             </div>
 
-            <section class="about-band-section">
+          <section class="about-band-section">
                 <h2>Monocien y los cuerpos celestes</h2>
 
                 <div class="band-members">
@@ -229,22 +229,38 @@
                 <div class="band-bio">
                     <h4>Biografía:</h4>
                     <p>
-                        Monocien y los cuerpos celestes emerge en la escena rock mendocina en 2014, fundado por Luis Cuesta y Juan Pablo Inzirillo junto a Gerónimo Flores en la batería. Durante sus primeros dos años, el trío original se dedicó a componer su material inicial y a presentarlo en diversos escenarios de la provincia, forjando su identidad sonora en vivo.
+                        Nacidos en la vibrante escena rock de Mendoza en 2014, Monocien y los cuerpos celestes fue formado por Luis Cuesta y Juan Pablo Inzirillo, junto a Gerónimo Flores en la batería inicial. Los primeros años fueron de forja y descubrimiento, componiendo las canciones fundacionales y definiendo su sonido en los escenarios de la provincia.
                     </p>
                     <p>
-                        Un cambio significativo llega en 2016 con la incorporación de Salvador Bucolo, quien asume la batería y consolida la formación actual. Esta nueva etapa marca un impulso en la difusión, la creación de nuevo material y una presencia constante en la agenda de eventos en vivo de Mendoza.
+                        El 2016 marcó la llegada de Salvador Bucolo a la batería, consolidando la formación actual y desatando una nueva fase de creatividad y actividad en vivo. El trío se convirtió rápidamente en una presencia constante y reconocible en el circuito mendocino.
                     </p>
                     <p>
-                        El 2017 ve la luz el videoclip de “Nada es perfecto”, realizado en colaboración con la productora “Marfil”, ampliando su alcance visual. La banda continúa sumando actuaciones en bares, salas municipales y fiestas locales. Su crecimiento es reconocido a fines de ese año al ser seleccionados para el Ciclo de Música Emergente de la Municipalidad de Capital, presentándose en la Nave Universitaria.
+                        Su crecimiento se reflejó en 2017 con el lanzamiento del videoclip "Nada es perfecto" (realizado con la productora Marfil) y su selección para el prestigioso Ciclo de Música Emergente de Capital en la Nave Universitaria. Al año siguiente, la banda cruzó las fronteras provinciales con shows en San Luis, experiencia que precedió la grabación de su álbum debut homónimo en Marfil Estudios.
                     </p>
                     <p>
-                        Expandiendo sus horizontes, Monocien y los cuerpos celestes realiza sus primeras presentaciones fuera de la provincia a principios de 2018, con dos fechas en San Luis, una de ellas por invitación municipal. Tras esta gira, la banda canaliza su energía en la grabación de su álbum debut homónimo en “Marfil Estudios”, disco que luego presentan activamente en Mendoza.
-                    </p>
-                    <p>
-                        Actualmente, Monocien y los cuerpos celestes se encuentra inmerso en el proceso creativo y de grabación de su segundo trabajo discográfico, listos para compartir nuevas exploraciones sonoras con su público.
+                        Tras presentar intensamente su primer disco, Monocien y los cuerpos celestes se encuentran en este 2025 enfocados en la creación y grabación de su segundo álbum, listos para revelar el próximo capítulo de su evolución sonora.
                     </p>
                 </div>
             </section>
+
+        <main class="tracklist-panel">
+
+            <div class="tracklist-header">
+                <h2>Canciones del Álbum</h2>
+            </div>
+
+            <ul class="track-list-accordion">
+                </ul>
+            <section class="about-band-section">
+                </section>
+            <div class="band-photo-section">
+                 <img src="img/band-photo.jpg" alt="Monocien y los cuerpos celestes en vivo">
+            </div>
+
+            <footer>
+                <p>&copy; <span id="current-year"></span> Monocien y los cuerpos celestes. Mendoza, Argentina.</p>
+            </footer>
+        </main>
 
             <footer>
                 <p>&copy; <span id="current-year"></span> MYLCC. Mendoza, Argentina.</p>
