--- a/index.html
+++ b/index.html
@@ -241,14 +241,18 @@
                         Tras presentar intensamente su primer disco, Monocien y los cuerpos celestes se encuentran en este 2025 enfocados en la creación y grabación de su segundo álbum, listos para revelar el próximo capítulo de su evolución sonora.
                     </p>
                 </div>
-            </section>
-    
-              <footer>
+          </section>
+
+            <footer>
                 <p>&copy; <span id="current-year"></span> MYLCC. Mendoza, Argentina.</p>
             </footer>
         </main>
 
-
+    </div> <div id="imageModal" class="modal">
+        <span class="modal-close" title="Cerrar">&times;</span>
+        <img class="modal-content" id="modalImage">
+        <div class="modal-caption">Portada del Álbum - MYLCC</div>
+    </div>
 
     <script src="script.js"></script>
 </body>
