--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="main-page-header">
-        <h1>MONOCIEN Y LOS CUERPOS CELESTES <span class="band-alias"> MYLCC </span></h1>
+        <h1>MONOCIEN Y LOS CUERPOS CELESTES</h1>
     </header>
     <div class="main-container">
 
@@ -43,7 +43,7 @@
         <main class="tracklist-panel">
 
             <div class="tracklist-header">
-                <h2>Canciones del Álbum</h2>
+                <h2>MYLCC</h2>
                 </div>
 
             <ul class="track-list-accordion">
