--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monocien y los cuerpos celestes - MYLCC</title>
+    <title>MONOCIEN Y LOS CUERPOS CELESTES</title>
     <link rel="stylesheet" href="style.css">
     </head>
 
 <body>
 
     <header class="main-page-header">
-        <h1>Monocien y los cuerpos celestes <span class="band-alias">(MYLCC)</span></h1>
+        <h1>Monocien y los cuerpos celestes</h1>
     </header>
 
     <div class="main-container">
