--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="main-page-header">
-        <h1>Monocien y los cuerpos celestes</h1>
+        <h1>MONOCIEN Y LOS CUERPOS CELESTES</h1>
     </header>
 
     <div class="main-container">
