--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 </div>
                 </div>
             <div class="main-player-controls">
-                <h3 id="player-current-track-title">-- | --</h3>
+                <h3 id="player-current-track-title">----</h3>
                 <div class="progress-container" id="progress-container">
                     <div class="progress-bar">
                         <div class="progress" id="progress"></div>
                     </div>
                     <div class="time-display">
-                        <span id="current-time">0:00</span> / <span id="duration">0:00</span>
+                        <span id="current-time">0:00</span>  <span id="duration">0:00</span>
                     </div>
                 </div>
                 <div class="buttons">
