--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
                     <a href="https://drive.google.com/file/d/1gdTvuKxpTl2R_UQj9hVdDothueoTefTP/view?usp=sharing" class="download-album-btn" download="MYLCC_Album.zip" target="_blank" title="Descargar Álbum Completo">Descargar Álbum</a>
                 </div>
 
-                <div class="band-photo-section-aside">
-                    <img src="img/band-photo.jpg" alt="Monocien y los cuerpos celestes en vivo">
-                </div>
+              
                  <audio id="audio-player"></audio>
             </aside>
 
@@ -231,24 +229,24 @@ busca un sol que devorar.
                             <img src="img/foto1.jpg" alt="MYLCC en concierto" class="gallery-thumbnail" data-large-src="img/foto1.jpg">
                         </div>
                         <div class="gallery-item">
-                            <img src="img/foto2.jpg" alt="Banda en escenario" class="gallery-thumbnail" data-large-src="img/foto2.jpg">
+                            <img src="img/foto2.jpg" alt="Salvador Bucolo" class="gallery-thumbnail" data-large-src="img/foto2.jpg">
                         </div>
                         <div class="gallery-item">
-                            <img src="img/foto3.jpg" alt="Detalle de guitarra" class="gallery-thumbnail" data-large-src="img/foto3.jpg">
+                            <img src="img/foto3.jpg" alt="Gira San Luis" class="gallery-thumbnail" data-large-src="img/foto3.jpg">
                         </div>
                         <div class="gallery-item">
-                            <img src="img/foto4.jpg" alt="Baterista en acción" class="gallery-thumbnail" data-large-src="img/foto4.jpg">
+                            <img src="img/foto4.jpg" alt="Juan Pablo Inzirillo" class="gallery-thumbnail" data-large-src="img/foto4.jpg">
                         </div>
                         <div class="gallery-item">
-                            <img src="img/foto5.jpg" alt="Monocien y los cuerpos celestes - show" class="gallery-thumbnail" data-large-src="img/foto5.jpg">
+                            <img src="img/foto5.jpg" alt="MYLCC en concierto" class="gallery-thumbnail" data-large-src="img/foto5.jpg">
                         </div>
                         <div class="gallery-item">
-                            <img src="img/foto6.jpg" alt="Bajista en concierto" class="gallery-thumbnail" data-large-src="img/foto6.jpg">
+                            <img src="img/foto6.jpg" alt="Luis Rodrigo Cuesta" class="gallery-thumbnail" data-large-src="img/foto6.jpg">
                         </div>
-                        <div class="gallery-item">
-                            <img src="img/foto7.jpg" alt="Vista del público" class="gallery-thumbnail" data-large-src="img/foto7.jpg">
+                         <div class="gallery-item">
+                            <img src="img/foto7.jpg" alt="En el estudio" class="gallery-thumbnail" data-large-src="img/foto7.jpg">
                         </div>
-                    </div>
+                       </div>
                 </section>
 
                 <footer class="tracklist-panel-footer">
