--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </aside>
 
             <main class="tracklist-panel booklet-style" id="tracklist-panel-main"> <div class="tracklist-header">
-                    <h2>MYLCC</h2>
+                    <h2>Canciones</h2>
                     <button id="toggle-booklet-bg-btn" class="theme-toggle-btn" title="Cambiar Fondo del Booklet">🎨</button>
                 </div>
 
