--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="main-content-wrapper" class="main-content-wrapper hidden-initially">
 
         <header class="main-page-header">
-            <h1><a href="index.html" class="header-band-link">MONOCIEN Y LOS CUERPOS CELESTES</a></h1>
+            <h1><a href="index.html" class="header-band-link"><strong>MONOCIEN Y LOS CUERPOS CELESTES</strong></a></h1>
         </header>
 
         <div class="main-container">
