--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ busca un sol que devorar.
                 </ul>
 
                 <section class="photo-gallery-section">
-                    <h1 class="gallery-title">Imágenes del Álbum</h1>
+                    <h1 class="gallery-title"></h1>
                     <div class="photo-gallery">
                         <div class="gallery-item"><img src="img/foto1.jpg" alt="MYLCC en concierto" class="gallery-thumbnail" data-large-src="img/foto1.jpg"></div>
                         <div class="gallery-item"><img src="img/foto2.jpg" alt="Salvador Bucolo Batería" class="gallery-thumbnail" data-large-src="img/foto2.jpg"></div>
