--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <main class="tracklist-panel booklet-style" id="tracklist-panel-main">
                 <div class="tracklist-header">
-                    <h2></h2>
+                    <h2>MYLCC</h2>
                     <button id="toggle-booklet-bg-btn" class="theme-toggle-btn" title="Cambiar Fondo del Booklet">🎨</button>
                 </div>
 
