--- a/index.html
+++ b/index.html
@@ -235,16 +235,14 @@ busca un sol que devorar.
                 </ul>
 
                 <section class="photo-gallery-section">
-                    <h1 class="gallery-title"></h1>
+                    <h1 class="gallery-title">Imágenes del Álbum</h1>
                     <div class="photo-gallery">
-                        <div class="gallery-item"><img src="img/foto1.jpg" alt="MYLCC en concierto" class="gallery-thumbnail" data-large-src="img/foto1.jpg"></div>
-                        <div class="gallery-item"><img src="img/foto2.jpg" alt="Salvador Bucolo Batería" class="gallery-thumbnail" data-large-src="img/foto2.jpg"></div>
-                        <div class="gallery-item"><img src="img/foto3.jpg" alt="Gira San Luis" class="gallery-thumbnail" data-large-src="img/foto3.jpg"></div>
-                        <div class="gallery-item"><img src="img/foto4.jpg" alt="Juan Pablo Inzirillo Bajo" class="gallery-thumbnail" data-large-src="img/foto4.jpg"></div>
-                        <div class="gallery-item"><img src="img/foto5.jpg" alt="Monocien y los cuerpos celestes show" class="gallery-thumbnail" data-large-src="img/foto5.jpg"></div>
-                        <div class="gallery-item"><img src="img/foto6.jpg" alt="Luis Rodrigo Cuesta Guitarra" class="gallery-thumbnail" data-large-src="img/foto6.jpg"></div>
-                        <div class="gallery-item"><img src="img/foto7.jpg" alt="En el estudio de grabación" class="gallery-thumbnail" data-large-src="img/foto7.jpg"></div>
-                    </div>
+                        <div class="gallery-item"><img src="img/foto1.jpg" alt="En el estudio" class="gallery-thumbnail" data-large-src="img/foto1.jpg"></div>
+                        <div class="gallery-item"><img src="img/foto2.jpg" alt="Juan Pablo Inzirillo" class="gallery-thumbnail" data-large-src="img/foto2.jpg"></div>
+                        <div class="gallery-item"><img src="img/foto3.jpg" alt="Luis Rodrigo Cuesta" class="gallery-thumbnail" data-large-src="img/foto3.jpg"></div>
+                        <div class="gallery-item"><img src="img/foto4.jpg" alt="Salvador Bucolo" class="gallery-thumbnail" data-large-src="img/foto4.jpg"></div>
+                        <div class="gallery-item"><img src="img/foto5.jpg" alt="Contratapa" class="gallery-thumbnail" data-large-src="img/foto5.jpg"></div>
+                                          </div>
                 </section>
 
                 <footer class="tracklist-panel-footer">
