--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                    
                     <div class="album-info-description">
                         <h4>Sobre el Álbum:</h4>
-                        <p>"MYLCC" fue grabado en una sola toma en Estudios Marfil en Abril del 2018.</p>
+                        <p>"MYLCC", fue grabado en una sola toma el 18 de abril del 2018 en los queridisimos Estudios Marfil.</p>
                     </div>
                      <div class="album-info-description"></div>
                     <p class="album-info-credits"><strong>Arte de tapa:</strong> Mario Damían Gomez</p>
